--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^7.1.0",
     "bootstrap": "^3.3.7",
     "browserify": "^13.1.1",
     "flux": "^2.0.3",
@@ -19,6 +20,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-open": "^2.0.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
